# pico-project-complement

./: .gitignore  README.md  pyproject.toml
src/pico_project_complement/: __init__.py  app.py  temperature.csv
